copyright cesction added to bottom of webpage

--- a/index.html
+++ b/index.html
@@ -729,8 +729,10 @@
       spellcheck="true"></textarea>
       <button type="button" onclick="sendEmail()" class="send-btn">Send</button>
       </div>
-    <!--footer-->
-    <div class="footer"></div>
+      <!--footer-->
+      <div class="footer"></div>
+      <!--credites-->
+      <div class="credites"></div>
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
