copyright statement added

--- a/index.html
+++ b/index.html
@@ -732,7 +732,8 @@
       <!--footer-->
       <div class="footer"></div>
       <!--credites-->
-      <div class="credites"></div>
+      <div class="copyright">copyright@Katkade Construction</div>
+      <!--js links-->
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
