content added to footer

--- a/index.html
+++ b/index.html
@@ -730,7 +730,31 @@
       <button type="button" onclick="sendEmail()" class="send-btn">Send</button>
       </div>
       <!--footer-->
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="footer-logo">
+          <img src="./images/katkade-constrction-logo-1.png">
+          <img src="./images/katkade-constrction-logo-2.png">
+        </div>
+        <div class="footer-list">
+          <ul>
+            <li>Project</li>
+            <li>Gallery</li>
+            <li>Article</li>
+            <li>FeedBack</li>
+            <li>Blog</li>
+            <li>Service</li>
+          </ul>
+        </div>
+        <div class="footer-list-2">
+          <ul>
+            <li>Morden Service</li>
+            <li>Morden Techniquies</li>
+            <li>Best Service</li>
+            <li>Top Companies</li>
+            <li>Trusted Products</li>
+          </ul>
+        </div>
+      </div>
       <!--credites-->
       <div class="copyright">copyright@Katkade Construction</div>
       <!--js links-->
