feedback button added to footer

--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@
             <li>Trusted Products</li>
           </ul>
         </div>
+        <div class="FeedBack">FeedBack</div>
       </div>
       <!--credites-->
       <div class="copyright">copyright@Katkade Construction</div>
