address and phone number added to footer

--- a/index.html
+++ b/index.html
@@ -740,8 +740,6 @@
             <li>Project</li>
             <li>Gallery</li>
             <li>Article</li>
-            <li>FeedBack</li>
-            <li>Blog</li>
             <li>Service</li>
           </ul>
         </div>
@@ -754,7 +752,11 @@
             <li>Trusted Products</li>
           </ul>
         </div>
-        <div class="FeedBack">FeedBack</div>
+        <div class="FeedBack">
+          <button type="button">FeedBack</button>
+          <div class="address">Flat No. 408, Vnp Appartment, panchavvati, Nashik.</div>
+          <div class="phone-number">+91 7588035979</div>
+        </div>
       </div>
       <!--credites-->
       <div class="copyright">copyright@Katkade Construction</div>
