menu image cahge in phone scren

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <img src="./images/katkade-constrction-logo-2.png" class="logo-2" />
         </div>
         <img
-          src="./images/menus.png"
+          src="./images/menu-bar.png"
           id="hamburger-menu"
           onclick="hamMenu()"
           alt="manu-button"
