social media in footer structure added

--- a/index.html
+++ b/index.html
@@ -756,6 +756,9 @@
           <button type="button">FeedBack</button>
           <div class="address">Flat No. 408, Vnp Appartment, panchavvati, Nashik.</div>
           <div class="phone-number">+91 7588035979</div>
+         <div class="social-media">
+          <!--social media icon-->
+         </div>
         </div>
       </div>
       <!--credites-->
