facebook and twitter logo added

--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@
           <!--social media icon-->
          <div class="social-media">
           <img src="./images/instagram.png">
+          <img src="./images/facebook.png">
          </div>
         </div>
       </div>
