hover effect added to social media icon

--- a/index.html
+++ b/index.html
@@ -760,6 +760,7 @@
          <div class="social-media">
           <img src="./images/instagram.png">
           <img src="./images/facebook.png">
+          <img src="./images/twitter.png">
          </div>
         </div>
       </div>
