get in touch button added to destop navbar

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             <li>Blog</li>
             <li>Contact</li>
           </ul>
+          <div class="phn-get-in-touch">
+            <button type="button">Get In Touch</button>
+          </div>
         </nav>
       </div>
     </div>
