--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <td data-aos="fade-up" data-aos-duration="1000" class="about-img">
                 <img src="./images/about-us-img-1.jpg" />
               </td>
-              <td>
+              <td class="about-description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
                 illo, blanditiis, veniam a modi debitis possimus itaque totam
                 quibusdam reprehenderit mollitia alias delectus iste. Aliquid
@@ -184,7 +184,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="about-description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
                 illo, blanditiis, veniam a modi debitis possimus itaque totam
                 quibusdam reprehenderit mollitia alias delectus iste. Aliquid
